Fixes syntax bug in CSS and layout issue

--- a/docs/main.css
+++ b/docs/main.css
@@ -124,7 +124,6 @@ body{
   padding: 2rem;
   background: none;
 }
-}
 
 /* Main content should grow to push footer down */
 main {
@@ -206,6 +205,7 @@ a:hover {
 section {
   text-align: left;
   max-width: 800px;
+  width: 100%;
   margin: 0 auto 2rem auto;
 }
 
@@ -218,6 +218,10 @@ section h2 {
 ul {
   list-style: none;
   padding-left: 0;
+  margin-left: 0;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  width: 100%;
 }
 
 li {
